# console_chat

./: .gitignore  CMakeLists.txt  README.md
doc/: architecture.md  client.puml  components.puml  service.puml
include/console_chat/: base_chat.h  chat_service.h  console.h  private_chat.h  user.h
include/console_chat/client/: chat_client.h  chat_console.h
include/console_chat/core/: base_chat.h  chat_service.h  password_protector.h  private_chat.h  service_state.h  user.h
include/console_chat/network/: tcp_socket.h
include/console_chat/storage/: file_manager.h  imanager.h
src/: base_chat.cpp  chat_service.cpp  console.cpp  main.cpp  private_chat.cpp
src/client/: chat_client.cpp  chat_console.cpp  main.cpp
src/core/: base_chat.cpp  chat_service.cpp  password_protector.cpp  private_chat.cpp
src/network/: tcp_socket.cpp
src/server/: main.cpp  protocol.cpp  protocol.h  request_router.cpp  request_router.h  session.cpp  session.h
src/storage/: file_manager.cpp
tests/: CMakeLists.txt  README.md
tests/integration/: client_server_e2e.cpp  request_flow.cpp
tests/unit/: base_chat.cpp  chat_service.cpp  password_protector.cpp  private_chat.cpp  user.cpp
